--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todoaplication",
+  "name": "todo-application",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,6 +14,9 @@
     "react-native": "0.68.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
